[build-system]
requires = ["setuptools>=45",
            "setuptools_scm[toml]>=6.2",
            "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "rbinvariantslib"
description = 'Radiation Belt Adiabatic Invariants Calculation from TS05, T96, LFM, and SWMF magnetic field models'
version = "0.1.0"
authors = [{name = "Daniel da Silva", email = "daniel.e.dasilva@nasa.gov"}]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "astropy>=5.1",
    "cdasws>=1.8.7",
    "h5py>=3.10.0",
    "numpy>=1.24.4,<2",
    "PyGeopack>=1.2.6",
    "pyhdf",
    "pyvista",
    "scipy>=1.9.3",
    "spacepy>=0.7.0",
    "types-python-dateutil"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "requests",
]

docs = [
    "sphinx",
    "sphinx_automodapi",
    "numpydoc",
    "pydata_sphinx_theme",
    "furo"
]

[project.urls]
Homepage = "https://rbinvariantslib.readthedocs.io/en/latest/"
